Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/011_procedure_used_as_function_init.xi
f()

g()
{
    x:int = f()
}
//@PRACOWNIA
//@should_not_typecheck
